# QQuickLive

./: .gitignore  CMakeLists.txt  README.md
include/: watcher.hpp
src/: Main.qml  main.cpp  watcher.cpp
